tests/fixtures/guardrails/invalid/route-typed-assigned-imported-binding-bypass/app/lib/delegated-loader.ts
export async function delegatedLoader() {
  return "  delegated  ".trim();
}

export async function delegatedAction() {
  return "  action  ".trim();
}
